--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,50 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
 html {
   font-family: 'Lato', sans-serif; }
   html body nav section {
@@ -49,11 +96,18 @@ html {
         width: 100%; }
     html body main section {
       display: none;
-      padding: 0 25px; }
+      padding: 0 25px;
+      margin-top: 20px; }
       html body main section.active {
         display: block; }
-      html body main section header h1 {
-        text-align: center; }
+      html body main section header {
+        padding-top: 0;
+        padding-bottom: 25px; }
+        html body main section header h1 {
+          text-align: center;
+          font-family: 'Atma', cursive;
+          font-size: 2.5em;
+          font-weight: 700; }
       html body main section article {
         border-top: 3px solid #000000;
         margin-bottom: 25px; }
@@ -65,6 +119,41 @@ html {
           margin-top: 0; }
         html body main section article img {
           width: 100%; }
+      html body main section nav .items {
+        text-align: center;
+        margin-bottom: 25px; }
+        html body main section nav .items li {
+          font-family: 'Atma', cursive;
+          display: inline-block;
+          margin-right: 10px;
+          margin-bottom: 10px;
+          padding: 15px 15px;
+          background-color: #c2c2c2;
+          border-radius: 15px;
+          font-size: 1.3em;
+          font-weight: 700;
+          width: 90px;
+          border: 1px solid #000; }
+        html body main section nav .items .casa {
+          background-color: #50b156; }
+        html body main section nav .items .product {
+          background-color: #f58e3b; }
+        html body main section nav .items .news {
+          background-color: #db3236; }
+        html body main section nav .items .contact {
+          background-color: #397fc1; }
+        html body main section nav .items .games {
+          background-color: #22589e; }
+        html body main section nav .items .arras {
+          background-color: #e1df2d; }
+        html body main section nav .items .enhe {
+          background-color: #4cae52; }
+        html body main section nav .items .enca {
+          background-color: #4cbdd6; }
+        html body main section nav .items .vehi {
+          background-color: #f28635; }
+        html body main section nav .items .art {
+          background-color: #e73138; }
     html body main footer {
       padding: 0 25px;
       min-height: 200px;
