--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,3 +1,52 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 html{
 	font-family: 'Lato', sans-serif;
 	body{
@@ -61,17 +110,23 @@ html{
 			section{
 				display: none;
 				padding: 0 25px;
+				margin-top: 20px;
 				&.active{
 					display:block;
 				}
 				header{
+					padding-top: 0;
+					padding-bottom: 25px;
 					h1{
 						text-align: center;
+						font-family: 'Atma', cursive;
+						font-size: 2.5em;
+						font-weight: 700;
 					}
 				}
 				article{
 			    border-top: 3px solid #000000;
-					margin-bottom: 25px;
+					margin-bottom: 25px;					
 					h1{
 						margin-top: 10px;
 						margin-bottom: 10px;
@@ -82,6 +137,55 @@ html{
 					}
 					img{
 						width: 100%;
+					}
+				}
+				nav{
+					.items{
+						text-align: center;
+						margin-bottom: 25px;
+						li{
+							font-family: 'Atma', cursive;
+							display: inline-block;
+							margin-right: 10px;
+							margin-bottom: 10px;
+							padding: 15px 15px;
+							background-color: #c2c2c2;
+							border-radius: 15px;
+							font-size: 1.3em;
+							font-weight: 700;
+							width: 90px;
+							border: 1px solid #000;
+						}
+						.casa{
+							background-color: #50b156;
+						}
+						.product{
+							background-color: #f58e3b;
+						}
+						.news{
+							background-color: #db3236;
+						}
+						.contact{
+					    background-color: #397fc1;
+						}
+						.games{
+							background-color: #22589e;
+						}
+						.arras{
+					    background-color: #e1df2d;
+						}
+						.enhe{
+					    background-color: #4cae52;
+						}
+						.enca{
+    					background-color: #4cbdd6;
+						}
+						.vehi{
+					    background-color: #f28635;
+						}
+						.art{
+							background-color: #e73138;
+						}
 					}
 				}
 			}
