--- a/css/custom.css
+++ b/css/custom.css
@@ -70,101 +70,90 @@ html {
           padding: 10px 20px;
           color: #fff;
           font-size: 1em; }
-  html body main {
-    /*
-    &.productos{
-    	background-color: yellow;
-    }
-    &.novedades{
-    	background-color: red;
-    }
-    &.contacto{
-    	background-color: blue;
-    }
-    */ }
-    html body main header {
-      padding: 25px 25px 0px 25px; }
-      html body main header button {
-        background-image: url("../images/menu-options.svg");
-        height: 35px;
-        width: 35px;
-        background-repeat: no-repeat;
-        background-color: #ffffff;
-        border: 0;
-        outline: 0; }
-      html body main header img {
+  html body main header {
+    padding: 25px 25px 0px 25px; }
+    html body main header button {
+      background-image: url("../images/menu-options.svg");
+      height: 35px;
+      width: 35px;
+      background-repeat: no-repeat;
+      background-color: #ffffff;
+      border: 0;
+      outline: 0; }
+    html body main header img {
+      width: 100%;
+      cursor: pointer; }
+  html body main section {
+    display: none;
+    padding: 0 25px;
+    margin-top: 20px; }
+    html body main section.active {
+      display: block; }
+    html body main section header {
+      padding-top: 0;
+      padding-bottom: 25px; }
+      html body main section header h1 {
+        text-align: center;
+        font-family: 'Atma', cursive;
+        font-size: 2.5em;
+        font-weight: 700; }
+    html body main section article {
+      border-top: 3px solid #000000;
+      margin-bottom: 25px; }
+      html body main section article h1 {
+        margin-top: 10px;
+        margin-bottom: 10px; }
+      html body main section article h2 {
+        font-size: 1em;
+        margin-top: 0; }
+      html body main section article img {
         width: 100%; }
-    html body main section {
-      display: none;
-      padding: 0 25px;
-      margin-top: 20px; }
-      html body main section.active {
-        display: block; }
-      html body main section header {
-        padding-top: 0;
-        padding-bottom: 25px; }
-        html body main section header h1 {
-          text-align: center;
-          font-family: 'Atma', cursive;
-          font-size: 2.5em;
-          font-weight: 700; }
-      html body main section article {
-        border-top: 3px solid #000000;
-        margin-bottom: 25px; }
-        html body main section article h1 {
-          margin-top: 10px;
-          margin-bottom: 10px; }
-        html body main section article h2 {
-          font-size: 1em;
-          margin-top: 0; }
-        html body main section article img {
-          width: 100%; }
-      html body main section nav .items {
-        text-align: center;
-        margin-bottom: 25px; }
-        html body main section nav .items li {
-          font-family: 'Atma', cursive;
-          display: inline-block;
-          margin-right: 10px;
-          margin-bottom: 10px;
-          padding: 15px 15px;
-          background-color: #c2c2c2;
-          border-radius: 15px;
-          font-size: 1.3em;
-          font-weight: 700;
-          width: 90px;
-          border: 1px solid #000; }
-        html body main section nav .items .casa {
-          background-color: #50b156; }
-        html body main section nav .items .product {
-          background-color: #f58e3b; }
-        html body main section nav .items .news {
-          background-color: #db3236; }
-        html body main section nav .items .contact {
-          background-color: #397fc1; }
-        html body main section nav .items .games {
-          background-color: #22589e; }
-        html body main section nav .items .arras {
-          background-color: #e1df2d; }
-        html body main section nav .items .enhe {
-          background-color: #4cae52; }
-        html body main section nav .items .enca {
-          background-color: #4cbdd6; }
-        html body main section nav .items .vehi {
-          background-color: #f28635; }
-        html body main section nav .items .art {
-          background-color: #e73138; }
-    html body main footer {
-      padding: 0 25px;
-      min-height: 200px;
-      background-color: grey;
-      border-top: 3px solid #000; }
-      html body main footer p {
-        text-align: center;
-        margin: 0;
-        padding-top: 25px;
+    html body main section nav .items {
+      text-align: center;
+      margin-bottom: 25px; }
+      html body main section nav .items li {
+        font-family: 'Atma', cursive;
+        display: inline-block;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        padding: 15px 15px;
+        background-color: #c2c2c2;
+        border-radius: 15px;
+        font-size: 1.3em;
         font-weight: 700;
-        font-size: 1.2em; }
+        width: 90px;
+        border: 1px solid #000; }
+      html body main section nav .items .casa {
+        background-color: #50b156; }
+      html body main section nav .items .product {
+        background-color: #f58e3b; }
+      html body main section nav .items .news {
+        background-color: #db3236; }
+      html body main section nav .items .contact {
+        background-color: #397fc1; }
+      html body main section nav .items .games {
+        background-color: #22589e; }
+      html body main section nav .items .arras {
+        background-color: #e1df2d; }
+      html body main section nav .items .enhe {
+        background-color: #4cae52; }
+      html body main section nav .items .enca {
+        background-color: #4cbdd6; }
+      html body main section nav .items .vehi {
+        background-color: #f28635; }
+      html body main section nav .items .art {
+        background-color: #e73138; }
+  html body footer {
+    padding: 0 25px;
+    min-height: 200px;
+    background-color: grey;
+    border-top: 3px solid #000; }
+    html body footer p {
+      text-align: center;
+      margin: 0;
+      padding-top: 25px;
+      font-weight: 700;
+      font-size: 1.2em; }
 
 body {
   width: 100%;
