--- a/css/custom.css
+++ b/css/custom.css
@@ -57,7 +57,8 @@ html {
       font-size: 1em;
       letter-spacing: 1px;
       padding: 0 20px;
-      margin: 0; }
+      margin: 0;
+      text-align: left; }
     html body nav section ul {
       padding: 0;
       margin: 10px 0;
@@ -82,7 +83,9 @@ html {
       outline: 0; }
     html body main header img {
       width: 100%;
-      cursor: pointer; }
+      cursor: pointer;
+      margin-top: 20px;
+      margin-bottom: 15px; }
   html body main section {
     display: none;
     padding: 0 25px;
@@ -91,12 +94,22 @@ html {
       display: block; }
     html body main section header {
       padding-top: 0;
-      padding-bottom: 25px; }
+      padding-bottom: 25px;
+      background-image: url(../images/rbn-yellow.png);
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      padding-bottom: 0px;
+      background-position: center top;
+      width: 93%;
+      margin: auto;
+      margin-bottom: 20px; }
       html body main section header h1 {
-        text-align: center;
         font-family: 'Atma', cursive;
-        font-size: 2.5em;
-        font-weight: 700; }
+        font-size: 1.5em;
+        font-weight: 700;
+        line-height: 1.7em;
+        color: white;
+        text-align: center; }
     html body main section article {
       border-top: 3px solid #000000;
       margin-bottom: 25px; }
@@ -116,13 +129,15 @@ html {
         display: inline-block;
         margin-right: 10px;
         margin-bottom: 10px;
-        padding: 15px 15px;
-        background-color: #c2c2c2;
-        border-radius: 15px;
-        font-size: 1.3em;
+        padding: 8px 10px;
         font-weight: 700;
-        width: 90px;
-        border: 1px solid #000; }
+        width: 120px;
+        margin-left: 0;
+        font-size: 1.3em;
+        line-height: 1.4em;
+        border-radius: 25px; }
+        html body main section nav .items li:nth-child(even) {
+          margin-right: 0; }
       html body main section nav .items .casa {
         background-color: #50b156; }
       html body main section nav .items .product {
@@ -134,7 +149,7 @@ html {
       html body main section nav .items .games {
         background-color: #22589e; }
       html body main section nav .items .arras {
-        background-color: #e1df2d; }
+        background-color: #cb99c5; }
       html body main section nav .items .enhe {
         background-color: #4cae52; }
       html body main section nav .items .enca {
@@ -154,39 +169,5 @@ html {
       padding-top: 25px;
       font-weight: 700;
       font-size: 1.2em; }
-
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0; }
-
-.slideout-menu {
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 0;
-  width: 256px;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  display: none;
-  background-color: coral;
-  background-color: #1D1F20;
-  background-image: linear-gradient(145deg, #1D1F20, #404348); }
-
-.slideout-panel {
-  position: relative;
-  z-index: 1;
-  will-change: transform;
-  background-color: #ffffff; }
-
-.slideout-open,
-.slideout-open body,
-.slideout-open .slideout-panel {
-  overflow: hidden; }
-
-.slideout-open .slideout-menu {
-  display: block; }
 
 /*# sourceMappingURL=custom.css.map */
