--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -62,6 +62,7 @@ html{
 					letter-spacing: 1px;
 					padding: 0 20px;
 					margin: 0;
+					text-align: left;
 				}
 				ul{
 					padding: 0;
@@ -96,6 +97,8 @@ html{
 				img{
 					width:100%;
 					cursor: pointer;
+					margin-top: 20px;
+					margin-bottom: 15px;
 				}
 			}
 			section{
@@ -108,11 +111,21 @@ html{
 				header{
 					padding-top: 0;
 					padding-bottom: 25px;
+					background-image: url(../images/rbn-yellow.png);
+			    background-repeat: no-repeat;
+			    background-size: 100% 100%;
+			    padding-bottom: 0px;
+			    background-position: center top;
+			    width: 93%;
+			    margin: auto;
+			    margin-bottom: 20px;
 					h1{
-						text-align: center;
 						font-family: 'Atma', cursive;
-						font-size: 2.5em;
+						font-size: 1.5em;
 						font-weight: 700;
+						line-height: 1.7em;
+						color: white;
+				    text-align: center;
 					}
 				}
 				article{
@@ -139,13 +152,16 @@ html{
 							display: inline-block;
 							margin-right: 10px;
 							margin-bottom: 10px;
-							padding: 15px 15px;
-							background-color: #c2c2c2;
-							border-radius: 15px;
-							font-size: 1.3em;
+							padding: 8px 10px;
 							font-weight: 700;
-							width: 90px;
-							border: 1px solid #000;
+							width: 120px;
+							margin-left: 0;
+							font-size: 1.3em;
+							line-height: 1.4em;
+							border-radius: 25px;
+							&:nth-child(even){
+								margin-right: 0;
+							}
 						}
 						.casa{
 							background-color: #50b156;
@@ -163,7 +179,7 @@ html{
 							background-color: #22589e;
 						}
 						.arras{
-					    background-color: #e1df2d;
+					    background-color: #cb99c5;
 						}
 						.enhe{
 					    background-color: #4cae52;
@@ -195,53 +211,4 @@ html{
 			}
 		}
 	}
-}
-
-
-
-nav{
-	section{
-		h3{
-
-		}
-	}
-}
-
-body {
-	width: 100%;
-	height: 100%;
-	margin:0;
-}
-
-.slideout-menu {
-	position: fixed;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	z-index: 0;
-	width: 256px;
-	overflow-y: auto;
-	-webkit-overflow-scrolling: touch;
-	display: none;
-	background-color: coral;
-	background-color: #1D1F20;
-  background-image: linear-gradient(145deg, #1D1F20, #404348);
-}
-
-.slideout-panel {
-	position:relative;
-	z-index: 1;
-	will-change: transform;
-	background-color:#ffffff;
-}
-
-.slideout-open,
-.slideout-open body,
-.slideout-open .slideout-panel {
-	overflow: hidden;
-}
-
-.slideout-open .slideout-menu {
-	display: block;
 }
