--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -58,11 +58,13 @@ html{
 					text-transform: uppercase;
 					color: #85888d;
 					font-weight: 700;
-					font-size: 1em;
+					//font-size: 1em;
 					letter-spacing: 1px;
 					padding: 0 20px;
 					margin: 0;
 					text-align: left;
+					font-family: 'Atma', cursive;
+		    	font-size: 1.5em;
 				}
 				ul{
 					padding: 0;
@@ -75,7 +77,8 @@ html{
 							display: block;
 							padding: 10px 20px;
 					    color: #fff;
-							font-size: 1em;
+							//font-size: 1em;
+							font-size: 1.5em;
 						}
 					}
 				}
@@ -97,14 +100,15 @@ html{
 				img{
 					width:100%;
 					cursor: pointer;
-					margin-top: 20px;
-					margin-bottom: 15px;
+					//margin-top: 20px;
+					//margin-bottom: 15px;
 				}
 			}
 			section{
 				display: none;
 				padding: 0 25px;
 				margin-top: 20px;
+		    margin-bottom: 20px;
 				&.active{
 					display:block;
 				}
@@ -131,6 +135,9 @@ html{
 				article{
 			    border-top: 3px solid #000000;
 					margin-bottom: 25px;
+					&:first-of-type{
+						border-top: 0;
+					}
 					h1{
 						margin-top: 10px;
 						margin-bottom: 10px;
@@ -154,7 +161,8 @@ html{
 							margin-bottom: 10px;
 							padding: 8px 10px;
 							font-weight: 700;
-							width: 120px;
+							//width: 120px;
+							width: 125px;
 							margin-left: 0;
 							font-size: 1.3em;
 							line-height: 1.4em;
