--- a/css/custom.css
+++ b/css/custom.css
@@ -54,11 +54,12 @@ html {
       text-transform: uppercase;
       color: #85888d;
       font-weight: 700;
-      font-size: 1em;
       letter-spacing: 1px;
       padding: 0 20px;
       margin: 0;
-      text-align: left; }
+      text-align: left;
+      font-family: 'Atma', cursive;
+      font-size: 1.5em; }
     html body nav section ul {
       padding: 0;
       margin: 10px 0;
@@ -70,7 +71,7 @@ html {
           display: block;
           padding: 10px 20px;
           color: #fff;
-          font-size: 1em; }
+          font-size: 1.5em; }
   html body main header {
     padding: 25px 25px 0px 25px; }
     html body main header button {
@@ -83,13 +84,12 @@ html {
       outline: 0; }
     html body main header img {
       width: 100%;
-      cursor: pointer;
-      margin-top: 20px;
-      margin-bottom: 15px; }
+      cursor: pointer; }
   html body main section {
     display: none;
     padding: 0 25px;
-    margin-top: 20px; }
+    margin-top: 20px;
+    margin-bottom: 20px; }
     html body main section.active {
       display: block; }
     html body main section header {
@@ -113,6 +113,8 @@ html {
     html body main section article {
       border-top: 3px solid #000000;
       margin-bottom: 25px; }
+      html body main section article:first-of-type {
+        border-top: 0; }
       html body main section article h1 {
         margin-top: 10px;
         margin-bottom: 10px; }
@@ -131,7 +133,7 @@ html {
         margin-bottom: 10px;
         padding: 8px 10px;
         font-weight: 700;
-        width: 120px;
+        width: 125px;
         margin-left: 0;
         font-size: 1.3em;
         line-height: 1.4em;
