--- a/css/custom.css
+++ b/css/custom.css
@@ -85,11 +85,18 @@ html {
     html body main header img {
       width: 100%;
       cursor: pointer; }
+    html body main header .ribbon {
+      height: 40px;
+      width: 40px;
+      position: absolute;
+      top: 0;
+      right: 15px; }
   html body main section {
     display: none;
     padding: 0 25px;
     margin-top: 20px;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    text-align: justify; }
     html body main section.active {
       display: block; }
     html body main section header {
@@ -102,7 +109,7 @@ html {
       background-position: center top;
       width: 93%;
       margin: auto;
-      margin-bottom: 20px; }
+      margin-bottom: 30px; }
       html body main section header h1 {
         font-family: 'Atma', cursive;
         font-size: 1.5em;
@@ -112,15 +119,22 @@ html {
         text-align: center; }
     html body main section article {
       border-top: 3px solid #000000;
-      margin-bottom: 25px; }
+      margin-bottom: 25px;
+      text-align: justify; }
       html body main section article:first-of-type {
         border-top: 0; }
       html body main section article h1 {
-        margin-top: 10px;
-        margin-bottom: 10px; }
+        margin-top: 25px;
+        margin-bottom: 25px;
+        font-size: 1.2em;
+        font-weight: 700;
+        text-align: center;
+        text-decoration: underline; }
       html body main section article h2 {
         font-size: 1em;
-        margin-top: 0; }
+        margin-top: 0;
+        color: #000000;
+        text-align: justify; }
       html body main section article img {
         width: 100%; }
     html body main section nav .items {
@@ -160,12 +174,12 @@ html {
         background-color: #f28635; }
       html body main section nav .items .art {
         background-color: #e73138; }
-  html body footer {
+  html body main footer {
     padding: 0 25px;
     min-height: 200px;
-    background-color: grey;
-    border-top: 3px solid #000; }
-    html body footer p {
+    background-color: #fec333;
+    border-top: 3px solid #363435; }
+    html body main footer p {
       text-align: center;
       margin: 0;
       padding-top: 25px;
