--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -88,6 +88,7 @@ html{
 		main{
 			header{
 				padding: 25px 25px 0px 25px;
+
 				button{
 					background-image: url('../images/menu-options.svg');
 					height: 35px;
@@ -103,12 +104,20 @@ html{
 					//margin-top: 20px;
 					//margin-bottom: 15px;
 				}
+				.ribbon{
+					height: 40px;
+					width: 40px;
+					position: absolute;
+					top: 0;
+					right: 15px;
+				}
 			}
 			section{
 				display: none;
 				padding: 0 25px;
 				margin-top: 20px;
 		    margin-bottom: 20px;
+		    text-align: justify;
 				&.active{
 					display:block;
 				}
@@ -122,7 +131,7 @@ html{
 			    background-position: center top;
 			    width: 93%;
 			    margin: auto;
-			    margin-bottom: 20px;
+			    margin-bottom: 30px;
 					h1{
 						font-family: 'Atma', cursive;
 						font-size: 1.5em;
@@ -135,16 +144,23 @@ html{
 				article{
 			    border-top: 3px solid #000000;
 					margin-bottom: 25px;
+					text-align: justify;
 					&:first-of-type{
 						border-top: 0;
 					}
 					h1{
-						margin-top: 10px;
-						margin-bottom: 10px;
+						margin-top: 25px;
+    				margin-bottom: 25px;
+						font-size: 1.2em;
+						font-weight: 700;
+						text-align: center;
+						text-decoration: underline;
 					}
 					h2{
 						font-size: 1em;
 						margin-top: 0;
+						color: #000000;
+				    text-align: justify;
 					}
 					img{
 						width: 100%;
@@ -204,18 +220,18 @@ html{
 					}
 				}
 			}
-		}
-		footer{
-			padding: 0 25px;
-			min-height: 200px;
-			background-color: grey;
-			border-top: 3px solid #000;
-			p{
-				text-align: center;
-				margin: 0;
-				padding-top: 25px;
-				font-weight: 700;
-				font-size: 1.2em;
+			footer{
+				padding: 0 25px;
+				min-height: 200px;
+				background-color: #fec333;
+				border-top: 3px solid #363435;
+				p{
+					text-align: center;
+					margin: 0;
+					padding-top: 25px;
+					font-weight: 700;
+					font-size: 1.2em;
+				}
 			}
 		}
 	}
