--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -115,6 +115,7 @@ html{
 			section{
 				display: none;
 				padding: 0 25px;
+				padding-bottom: 50px;
 				margin-top: 20px;
 		    margin-bottom: 20px;
 		    text-align: justify;
