effects and opacity change

--- a/css/custom.css
+++ b/css/custom.css
@@ -92,14 +92,17 @@ html {
       top: 0;
       right: 15px; }
   html body main section {
-    display: none;
-    padding: 0 25px;
-    padding-bottom: 50px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: justify; }
+    text-align: justify;
+    opacity: 0;
+    height: 0; }
     html body main section.active {
-      display: block; }
+      transition: opacity 1s linear;
+      opacity: 1;
+      padding: 0 25px;
+      padding-bottom: 50px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      height: auto; }
     html body main section header {
       padding-top: 0;
       padding-bottom: 25px;
@@ -179,12 +182,13 @@ html {
     padding: 0 25px;
     min-height: 200px;
     background-color: #fec333;
-    border-top: 3px solid #363435; }
+    border-top: 3px solid #363435;
+    padding-top: 40px; }
     html body main footer p {
       text-align: center;
       margin: 0;
-      padding-top: 25px;
       font-weight: 700;
-      font-size: 1.2em; }
+      font-size: 1em;
+      line-height: 2em; }
 
 /*# sourceMappingURL=custom.css.map */
