--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -119,7 +119,7 @@ html{
 				height: 0;
 				&.active{
 					//display:block;
-					transition: opacity 1s linear;
+					transition: opacity 1s cubic-bezier(0.39, 0.58, 0.57, 1);
 					opacity: 1;
 					padding: 0 25px;
 					padding-bottom: 50px;
