--- a/css/custom.css
+++ b/css/custom.css
@@ -96,7 +96,7 @@ html {
     opacity: 0;
     height: 0; }
     html body main section.active {
-      transition: opacity 1s linear;
+      transition: opacity 1s cubic-bezier(0.39, 0.58, 0.57, 1);
       opacity: 1;
       padding: 0 25px;
       padding-bottom: 50px;
