--- a/css/custom.css
+++ b/css/custom.css
@@ -84,7 +84,8 @@ html {
       outline: 0; }
     html body main header img {
       width: 100%;
-      cursor: pointer; }
+      cursor: pointer;
+      -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
     html body main header .ribbon {
       height: 40px;
       width: 40px;
