--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -103,6 +103,8 @@ html{
 					cursor: pointer;
 					//margin-top: 20px;
 					//margin-bottom: 15px;
+					-webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
+
 				}
 				.ribbon{
 					height: 40px;
