--- a/css/custom.css
+++ b/css/custom.css
@@ -79,7 +79,7 @@ html {
       height: 35px;
       width: 35px;
       background-repeat: no-repeat;
-      background-color: #ffffff;
+      background-color: inherit;
       border: 0;
       outline: 0; }
     html body main header img {
