--- a/css/slideout.css
+++ b/css/slideout.css
@@ -22,6 +22,7 @@ body {
   position: relative;
   z-index: 1;
   will-change: transform;
+  overflow: hidden;
   background-color: #ffffff; }
 
 .slideout-open,
