--- a/css/custom.css
+++ b/css/custom.css
@@ -1,195 +1,2 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-html {
-  font-family: 'Lato', sans-serif; }
-  html body nav section {
-    margin: 25px 0; }
-    html body nav section h2 {
-      cursor: pointer;
-      text-transform: uppercase;
-      color: #85888d;
-      font-weight: 700;
-      letter-spacing: 1px;
-      padding: 0 20px;
-      margin: 0;
-      text-align: left;
-      font-family: 'Atma', cursive;
-      font-size: 1.5em; }
-    html body nav section ul {
-      padding: 0;
-      margin: 10px 0;
-      margin-left: 15px;
-      list-style: none; }
-      html body nav section ul li {
-        display: block; }
-        html body nav section ul li h3 {
-          display: block;
-          padding: 10px 20px;
-          color: #fff;
-          font-size: 1.5em; }
-  html body main header {
-    padding: 25px 25px 0px 25px; }
-    html body main header button {
-      background-image: url("../images/menu-options.svg");
-      height: 35px;
-      width: 35px;
-      background-repeat: no-repeat;
-      background-color: inherit;
-      border: 0;
-      outline: 0; }
-    html body main header img {
-      width: 100%;
-      cursor: pointer;
-      -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
-    html body main header .ribbon {
-      height: 40px;
-      width: 40px;
-      position: absolute;
-      top: 0;
-      right: 15px; }
-  html body main section {
-    text-align: justify;
-    opacity: 0;
-    height: 0; }
-    html body main section.active {
-      transition: opacity 1s cubic-bezier(0.39, 0.58, 0.57, 1);
-      opacity: 1;
-      padding: 0 25px;
-      padding-bottom: 50px;
-      margin-top: 20px;
-      margin-bottom: 20px;
-      height: auto; }
-    html body main section header {
-      padding-top: 0;
-      padding-bottom: 25px;
-      background-image: url(../images/rbn-yellow.png);
-      background-repeat: no-repeat;
-      background-size: 100% 100%;
-      padding-bottom: 0px;
-      background-position: center top;
-      width: 93%;
-      margin: auto;
-      margin-bottom: 30px; }
-      html body main section header h1 {
-        font-family: 'Atma', cursive;
-        font-size: 1.5em;
-        font-weight: 700;
-        line-height: 1.7em;
-        color: white;
-        text-align: center; }
-    html body main section article {
-      border-top: 3px solid #000000;
-      margin-bottom: 25px;
-      text-align: justify; }
-      html body main section article:first-of-type {
-        border-top: 0; }
-      html body main section article h1 {
-        margin-top: 25px;
-        margin-bottom: 25px;
-        font-size: 1.2em;
-        font-weight: 700;
-        text-align: center;
-        text-decoration: underline; }
-      html body main section article h2 {
-        font-size: 1em;
-        margin-top: 0;
-        color: #000000;
-        text-align: justify; }
-      html body main section article img {
-        width: 100%; }
-    html body main section nav .items {
-      text-align: center;
-      margin-bottom: 25px; }
-      html body main section nav .items li {
-        font-family: 'Atma', cursive;
-        display: inline-block;
-        margin-right: 5px;
-        margin-bottom: 10px;
-        padding: 8px 10px;
-        font-weight: 700;
-        width: 130px;
-        margin-left: 0;
-        font-size: 1.3em;
-        line-height: 1.4em;
-        border-radius: 25px; }
-        html body main section nav .items li:nth-child(even) {
-          margin-right: 0; }
-      html body main section nav .items .casa {
-        background-color: #50b156; }
-      html body main section nav .items .product {
-        background-color: #f58e3b; }
-      html body main section nav .items .news {
-        background-color: #db3236; }
-      html body main section nav .items .contact {
-        background-color: #397fc1; }
-      html body main section nav .items .games {
-        background-color: #22589e; }
-      html body main section nav .items .arras {
-        background-color: #cb99c5; }
-      html body main section nav .items .enhe {
-        background-color: #4cae52; }
-      html body main section nav .items .enca {
-        background-color: #4cbdd6; }
-      html body main section nav .items .vehi {
-        background-color: #f28635; }
-      html body main section nav .items .art {
-        background-color: #e73138; }
-  html body main footer {
-    padding: 0 25px;
-    min-height: 200px;
-    background-color: #fec333;
-    border-top: 3px solid #363435;
-    padding-top: 40px; }
-    html body main footer p {
-      text-align: center;
-      margin: 0;
-      font-weight: 700;
-      font-size: 1em;
-      line-height: 2em; }
-
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}html{font-family:'Lato', sans-serif}html body nav section{margin:22px 0}html body nav section h2{cursor:pointer;text-transform:uppercase;color:#85888d;font-weight:700;letter-spacing:1px;padding:0 20px;margin:0;text-align:left;font-family:'Atma', cursive;font-size:1.5em}html body nav section ul{padding:0;margin:10px 0;margin-left:15px;list-style:none}html body nav section ul li{display:block}html body nav section ul li h3{display:block;padding:10px 20px;color:#fff;font-size:1.5em}html body main header{padding:25px 25px 0px 25px}html body main header button{background-image:url("../images/menu-options.svg");height:35px;width:35px;background-repeat:no-repeat;background-color:inherit;border:0;outline:0}html body main header img{width:100%;cursor:pointer;-webkit-tap-highlight-color:rgba(255,255,255,0)}html body main header .ribbon{height:40px;width:40px;position:absolute;top:0;right:15px}html body main section{text-align:justify;opacity:0;height:0}html body main section.active{transition:opacity 1s cubic-bezier(0.39, 0.58, 0.57, 1);opacity:1;padding:0 25px;padding-bottom:50px;margin-top:20px;margin-bottom:20px;height:auto}html body main section header{padding-top:0;padding-bottom:25px;background-image:url(../images/rbn-yellow.png);background-repeat:no-repeat;background-size:100% 100%;padding-bottom:0px;background-position:center top;width:93%;margin:auto;margin-bottom:30px}html body main section header h1{font-family:'Atma', cursive;font-size:1.5em;font-weight:700;line-height:1.7em;color:white;text-align:center}html body main section article{border-top:3px solid #000000;margin-bottom:25px;text-align:justify}html body main section article:first-of-type{border-top:0}html body main section article h1{margin-top:25px;margin-bottom:25px;font-size:1.2em;font-weight:700;text-align:center;text-decoration:underline;line-height:1.1em}html body main section article h2{font-size:1em;margin-top:0;color:#000000;text-align:justify;line-height:1.2em}html body main section article img{width:100%}html body main section nav .items{text-align:center;margin-bottom:25px}html body main section nav .items li{font-family:'Atma', cursive;display:inline-block;margin-right:5px;margin-bottom:10px;padding:8px 10px;font-weight:700;width:150px;margin-left:0;font-size:1.3em;line-height:1.4em;border-radius:25px}html body main section nav .items li:nth-child(even){margin-right:0}@media screen and (max-width: 320px){html body main section nav .items li{width:130px}}html body main section nav .items .casa{background-color:#50b156}html body main section nav .items .product{background-color:#f58e3b}html body main section nav .items .news{background-color:#db3236}html body main section nav .items .contact{background-color:#397fc1}html body main section nav .items .games{background-color:#22589e}html body main section nav .items .arras{background-color:#cb99c5}html body main section nav .items .enhe{background-color:#4cae52}html body main section nav .items .enca{background-color:#4cbdd6}html body main section nav .items .vehi{background-color:#f28635}html body main section nav .items .art{background-color:#e73138}html body main section p{font-size:1.15em;line-height:1.5em;font-family:'Oswald', sans-serif;font-weight:400;padding:0px 20px}html body main footer{padding:0 25px;min-height:200px;background-color:#fec333;border-top:3px solid #363435;padding-top:40px}html body main footer p{text-align:center;margin:0;font-weight:700;font-size:1em;line-height:2em}
 /*# sourceMappingURL=custom.css.map */
