--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -52,13 +52,12 @@ html{
 	body{
 		nav{
 			section{
-		    margin: 25px 0;
+		    margin: 22px 0;
 				h2{
 					cursor:pointer;
 					text-transform: uppercase;
 					color: #85888d;
 					font-weight: 700;
-					//font-size: 1em;
 					letter-spacing: 1px;
 					padding: 0 20px;
 					margin: 0;
@@ -163,12 +162,15 @@ html{
 						font-weight: 700;
 						text-align: center;
 						text-decoration: underline;
+						line-height: 1.1em;
 					}
 					h2{
 						font-size: 1em;
 						margin-top: 0;
 						color: #000000;
 				    text-align: justify;
+						line-height: 1.2em;
+
 					}
 					img{
 						width: 100%;
@@ -185,13 +187,16 @@ html{
 							margin-bottom: 10px;
 							padding: 8px 10px;
 							font-weight: 700;
-							width: 130px;
+							width: 150px;
 							margin-left: 0;
 							font-size: 1.3em;
 							line-height: 1.4em;
 							border-radius: 25px;
 							&:nth-child(even){
 								margin-right: 0;
+							}
+							@media screen and (max-width: 320px) {
+								width: 130px;
 							}
 						}
 						.casa{
@@ -225,6 +230,17 @@ html{
 							background-color: #e73138;
 						}
 					}
+				}
+				p{
+					/*
+					font-size: 1em;
+    			line-height: 1.25em;
+					*/
+					font-size: 1.15em;
+					line-height: 1.5em;
+					font-family: 'Oswald', sans-serif;
+					font-weight: 400;
+					padding: 0px 20px;
 				}
 			}
 			footer{
